feat: add toast message if "add timer" clicked when time is not set

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,5 @@
     <string name="hours">часы</string>
     <string name="minutes">минуты</string>
     <string name="seconds">секунды</string>
+    <string name="time_not_set_message">Сначала задайте время!</string>
 </resources>
